# thesis-game

./: .gitignore  .vercelignore  DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICK_START.sh  README.md  SETUP_INSTRUCTIONS.md  package.json  render.yaml  requirements.txt  test_basic_functionality.py  vercel.json  verify_structure.py
api/: index.py  pyproject.toml  requirements.txt
backend/: api.py  convert_models_to_numpy.py  fix_model_sizes.py  generate_test_paths.py  requirements.txt  retrain_models.py  test_model_integrity.py  train_models.py  verify_models.py
backend/algorithms/: __init__.py  rt.py  rt_numpy.py  srlsm.py
backend/algorithms/utils/: randomized_neural_networks.py  reservoir_numpy.py
backend/data/paths/: dko_test.npz  test_1stock.npz  test_3stock.npz  test_7stock.npz  train_1stock.npz  train_3stock.npz  upandout_test.npz
backend/data/trained_models/: doublebarrierlookbackfloatingput.pkl  doublebarriermaxcall.pkl  doublebarrierrankweightedbskcall.pkl  doublemovingbarrierdispersioncall.pkl  downandoutbest2call.pkl  downandoutminput.pkl  randomlymovingbarriercall.pkl  upandoutcall.pkl  upandoutminput.pkl
backend/models/: black_scholes.py  rough_heston.py
backend/payoffs/: barrier_options.py  game_payoffs.py
frontend/: .env.production  index.html  package-lock.json  package.json
frontend/public/: info.html
frontend/src/: App.jsx
frontend/src/components/: ControlPanel.jsx  GameBoard.jsx  GameSelectionModal.jsx  InfoPanel.jsx  ResultsDisplay.jsx  StockChart.jsx
frontend/src/styles/: index.css
